...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/okay"
                android:foreground="@drawable/custom_ripple_border"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btnNo"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <com.app.dubaiculture.ui.components.custombutton.CustomButton
                android:id="@+id/btnNo"
                style="@style/SubmitButtonOutLined"
                android:layout_width="0dp"
...
