<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<com.google.android.material.card.MaterialCardView
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_90sdp"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardBackgroundColor="#F1F4FD"
...
